# projeto-backend

./: .gitignore  README.md  db.sqlite3  pyproject.toml  setup.py
config/: settings.py  urls.py
wavewhiz_app/: admin.py  apps.py  auth_backend.py  forms.py  models.py  serializers.py  urls.py  views.py
wavewhiz_app/migrations/: 0001_initial.py  0002_categorialoja_remove_produtos_empreendedor_and_more.py  0003_usuario_alter_carrinho_cliente_and_more.py  0004_usuario_is_staff_usuario_is_superuser_and_more.py  0005_alter_usuario_cpf_alter_usuario_role.py  0006_remove_loja_categoria_loja_categorias_loja_cep_and_more.py  0007_remove_usuario_cep_remove_usuario_complemento_and_more.py  0008_remove_produto_categoria.py
